feat(agent&launcher): implement player join event handling with bytecode transformation
- Add PlayerListTransform to intercept placeNewPlayer method
- Create PlayerListAdvice to post PlayerJoin events
- Implement PlayerJoinHandle to process agent messages
- Register agent message bus with annotation scanning
- Configure launcher with JVM options and agent support
- Update build scripts for agent and launcher modules
- Remove self-restart logic from main class
- Integrate tinylog for logging in launcher
- Add configuration files for launcher settings